<resources>
    <!--Application name-->
    <string name="app_name">Khana</string>

    <!--Activity name-->
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="activity_login">Login</string>
    <string name="activity_signup">SignUp</string>

    <!--Image content description-->
    <string name="content_description">food app</string>

    <!--Other strings-->
    <string name="khana">KHANA</string>
    <string name="app_tagline">A Homemade Food\n Selling App</string>
    <string name="login_btn_fb_txt">Facebook</string>
    <string name="login_btn_gmail_txt">Gmail</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_with_email">Register yourself! HURRY UP</string>
    <string name="or">or</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>

    <string name="already_have_an_account_sign_in">
        Already have an account\n SIGN IN!
    </string>
    <string name="username">Username</string>

    <!--navigation drawer menu item strings-->
    <string name="inbox">Inbox</string>
    <string name="notifications">Notifications</string>
    <string name="fav">Favourite Chef</string>
    <string name="nearby_search">Search Cook Nearby</string>
    <string name="be_a_chef">Be a Chef</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="sign_out">Sign out</string>

    <string-array name="nav_item_activity_titles">
        <item>Search Cook Nearby</item>
        <item>Be a Chef</item>
        <item>Inbox</item>
        <item>Notifications</item>
        <item>Favourite Chef</item>
    </string-array>

    <!--drawer-->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="other_heading">Other</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--facebook app id-->
    <string name="facebook_app_id">1370929936355982</string>


</resources>
