<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.infinity.homefoodsellingapp.activity.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimaryTransparent"
        android:background="@drawable/splashimage"
        android:contentDescription="@string/content_description"
        />

    <LinearLayout
        android:id="@+id/app_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:contentDescription="@string/content_description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/khana"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/app_tagline"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:typeface="sans" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_solid_bg"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWhite"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_outline_bg"
            android:text="@string/signin"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>


</RelativeLayout>
