<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.infinity.homefoodsellingapp.activity.Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimaryTransparent"
        android:background="@drawable/splashimage"
        />

    <LinearLayout
        android:id="@+id/app_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/khana"
            android:textColor="#ffffff"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/app_tagline"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/app_heading"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryTransparent"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="17sp"
                android:textColorHint="@color/colorPrimaryText"
                android:textColor="@color/colorPrimaryText"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/colorPrimaryText"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryText"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/login"
            android:elevation="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/activity_login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_login"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical"
        android:weightSum="3"
        >

        <View
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:background="@color/colorPrimaryDark"
            />

        <TextView

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/or"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            />

        <View
            android:layout_height="1dp"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:background="@color/colorPrimaryDark"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/linear_or"
        android:padding="10dp"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:id="@+id/signin_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_fb_login_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_btn_fb_txt"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/signin_gmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_gmail_login_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_btn_gmail_txt"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:onClick="GoToSignup"
        android:text="@string/signup_with_email"
        android:textColor="@color/colorGmailRed"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_marginBottom="4dp"
        />

</RelativeLayout>
